--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ html {
     background-color: #d4e4c6;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    cursor: grab;
+    cursor: pointer;
 }
 
 img {
